search UI fix 2: input box vertical alignment

--- a/search/assets/search.css
+++ b/search/assets/search.css
@@ -27,7 +27,7 @@ nav {
     -webkit-flex: 1;
     flex: 1;
     background-color: #ffffff;
-    padding: 0 10px;
+    padding: 2px 10px;
 }
 
 #search_box > :last-child {
@@ -39,7 +39,9 @@ nav {
 #search_box input {
     border: none;
     width: 100%;
-    height: 30px;
+    height: 100%;
+    vertical-align: top;
+    font-size: 18px;
 }
 
 footer {
